# rython

./: .gitignore  BUG_REPORT.md  Cargo.toml  README.md  TODO.md  Todo.txt  backu  codegen_third_bug_report.txt  compiler_bug_report.md  fix.txt  fixes.txt  ir_output.txt  ir_output_aussehen  ir_syntax  ir_syntax_codex  ir_syntax_fr  jannis_slop_antwort.txt  jesko_slop.txt  out.asm  rython_syntax.txt  syntax  t  todo  todo.txt  todo_neu_ir  todo_reviewed.txt  änderungen  änderungen.txt
crates/ir_to_assembly/: Cargo.toml
crates/manager/: Cargo.toml
crates/rython_cli/: Cargo.toml
crates/rython_to_ir/: Cargo.toml
examples/: all_features.ry  bug.ry  current_features.ry  implemented_features.ry  main.asm  main.ry  mainout  target_features.ry  test.asm  test.ry  testout
examples/bugs/: 001_loop_statement_requires_semicolon.ry  002_loop_expression_panics.ry  003_while_expression_panics.ry  004_yield_wrong_context.ry  005_tail_expression_accepted.ry  006_return_without_semicolon_accepted.ry  007_for_codegen_invalid_statement.ry  008_import_invalid_item.ry  009_trait_invalid_item.ry  010_impl_invalid_item.ry  011_any_trait_panics.ry  012_generics_unknown_type.ry  013_associated_call_not_supported.ry  014_top_level_operator_accepted.ry  015_rhs_operator_dispatch_order.ry  016_void_call_has_temp.ry  017_missing_return_accepted.ry  018_duplicate_local_accepted.ry  019_parameter_global_conflict_lookup.ry  020_string_literal_requires_missing_prelude.ry  021_list_literal_requires_missing_prelude.ry  README.md  (+19 more)
src/: lib.rs
tests/: manager_tests.rs  rython_ir_tests.rs
(+36 files in other folders)
