[package]
name = "rython"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/rython_cli",
    "crates/rython_to_ir",
    "crates/ir_to_assembly",
    "crates/manager",
]
resolver = "2"

[dev-dependencies]
ir_to_assembly = { path = "crates/ir_to_assembly" }
manager = { path = "crates/manager" }
rython_to_ir = { path = "crates/rython_to_ir" }
